<resources>
    <string name="app_name">QR GENERATOR</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="facebook_paste" translatable="false">Paste your facebook</string>
    <string name="qr_creator" translatable="false">QR GENERATOR</string>
    <string name="generate">Generate</string>
    <string name="cleared">Cleared!</string>
    <string name="your_qr_code_has_been_generated">Your QR Code Has Been Generated</string>
    <string name="link_text" translatable="false">Link / Text</string>
    <string name="share_qr">Share</string>
    <string name="save_qr">Save QR</string>
    <string name="instagram_hint" translatable="false">Drop your @ here : </string>
    <string name="name_qr_hint">Enter name of QR...</string>
    <string name="link_qr_hint">Paste Link or Text Here...</string>
    <string name="create_qr">Create</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="clear">Clear all</string>
    <string name="could_save_bitmap">Could\'t Save Bitmap</string>
    <string name="failed_to_share">Failed to share</string>
    <string name="create_qr_first">Create QR First!</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all_history_removed">All History Removed!</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="you_want_delete_all_history">You Want to Delete All History</string>
    <string name="fill_boxes">Please fill the text box or name box !</string>

    <string name="photo_saved_ok">QR saved successfully!</string>
    <string name="failed_save_photo">Failed to save QR!</string>
    <string name="removed">Removed</string>
    <string name="delete">Delete</string>
    <string name="sure_delete_qr">Are You Sure You Want to Delete This QR ?</string>

    <string-array name="menu">
        <item>Link / Text</item>
        <item>Facebook</item>
        <item>Instagram</item>
    </string-array>
    <string name="fragment_history_name">QR from your story</string>
    <string name="done">Done!</string>
    <string name="searchHint">Search here...</string>


<!--    экспорт/импорт-->
    <string name="message_save_json">Your database of QR codes - saved!</string>
    <string name="message_dont_save_json">An error has occurred! Your database of QR codes is not saved!</string>
    <string name="message_json_is_null">You have nothing to export yet, create a qr code!</string>
    <string name="message_no_file">Import file not found or empty!</string>
    <string name="message_import_sucsess">"Your import file with QR codes has been successfully added to the application!"</string>



    <string name="delete_item">Delete</string>
    <string name="export_file">Export</string>
    <string name="import_file">Import</string>


    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="ad_call_to_action_text" translatable="false">Install</string>
    <string name="ad_app_icon_content_description" translatable="false">icon</string>
    <string name="ad_app_open" translatable="false">Open</string>


<!--    отзыв-->
    <string name="update_available">Update available</string>
<string name="update_text">Your app has an update available. Do you want to go to the Google Play page to update?</string>
<string name="update_yes">Yes</string>
<string name="update_no">No</string>

<string name="update_canceled">Update canceled!</string>
<string name="new_app_is_ready">New update is ready!</string>
<string name="update_install">Install</string>

<string name="text_review">Every review is very important to us! Spend 1 minute of your time - help in the development of the program! Thank you very much! Glory to Ukraine!</string>
<string name="laiter_review">Later</string>
<string name="leave_review">Please leave a review!</string>
<string name="ok_review">With pleasure!</string>

<string name="text_title_in_edit_qr">Enter a new name or a new QR code value!</string>




</resources>