<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title=""
        android:iconTint="@color/white"
        android:titleTextColor="@android:color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        app:theme="@style/toolbar" />
    <item

        android:id="@+id/delete_menu"
        android:icon="@drawable/ic_delete"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        android:title="@string/delete_item"/>
    <item
        android:id="@+id/export"
        android:title="@string/export_file"
        android:icon="@drawable/ic_baseline_import_export_24"/>
    <item
        android:id="@+id/imports"
        android:title="@string/import_file"
        />


</menu>