<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2237"

    tools:context=".fragments.home.HomeFragment">


    <!--        android:windowSoftInputMode="stateVisible|adjustResize"-->


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/title_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/qr_creator"
                android:textColor="#2C41A5"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="-36dp"
                android:text="@string/qr_creator"
                android:textColor="#6666FE"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/title_textview2"
                app:layout_constraintStart_toStartOf="@+id/title_textview2"
                app:layout_constraintTop_toBottomOf="@+id/title_textview2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/qr_creator"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="196dp"
            android:layout_height="159dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_qr_icon" />

        <EditText
            android:id="@+id/edNameQr"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corners"

            android:ems="10"


            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:foregroundGravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/name_qr_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFEFE"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/plainText"
                android:layout_width="325dp"
                android:layout_height="82dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corners"
                android:clickable="true"
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal|top"
                android:hint="@string/link_qr_hint"
                android:inputType="textImeMultiLine"
                android:lines="6"
                android:maxLines="6"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/clear"
                android:textColor="#6666FE"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/plainText"
                app:layout_constraintEnd_toEndOf="@+id/plainText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="LARGE_BANNER"
        app:adUnitId="ca-app-pub-3971991853344828/8882275768"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.247" />


<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--&lt;!&ndash;        app:adSize="LARGE_BANNER"&ndash;&gt;-->
<!--        app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout"-->
<!--        app:layout_constraintVertical_bias="0.247"></com.google.android.gms.ads.AdView>-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/link_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/dark"
                android:src="@drawable/ic_add_link"
                android:tag="Link / Text"
                app:tint="@color/teal_200"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/dark"
                android:src="@drawable/ic_facebook"
                android:tag="Facebook"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/dark"
                android:src="@drawable/ic_instagram"
                android:tag="Instagram"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/SuccessBg"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:alpha="0"
        android:background="#8094FE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/successImageView"
        android:layout_width="96dp"
        android:layout_height="174dp"
        android:alpha="0"
        android:src="@drawable/ic_success"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>